# Comp1100-assignment1

./: .gitignore  Assignment1.cabal  LICENSE  README.md  comp1100-assignment1.cabal  stack.yaml
app/: Main.hs
src/: Controller.hs  HelloCodeWorld.hs  Main.hs  Model.hs  View.hs
test/: ShapesTest.hs  Testing.hs
