name:                comp1100-assignment1
version:             0.1.0.0
homepage:            https://cs.anu.edu.au/courses/comp1100
author:              Tony Hosking
maintainer:          antony.hosking@anu.edu.au
copyright:           2019 The Australian National University
category:            Education
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://gitlab.cecs.anu.edu.au/comp1100/comp1100-assignment1.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , codeworld-api >= 0.2.2.1 && < 0.3
                     , text
  exposed-modules:     Controller
                     , Model
                     , View
  ghc-options:         -Wall

executable shapes
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , codeworld-api >= 0.2.2.1 && < 0.3
                     , comp1100-assignment1
                     , text
  ghc-options:         -Wall -threaded

test-suite shapes-test
  type:                exitcode-stdio-1.0
  main-is:             ShapesTest.hs
  other-modules:       Testing
  build-depends:       base >= 4.7 && < 5
                     , codeworld-api >= 0.2.2.1 && < 0.3
                     , comp1100-assignment1
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
